Añadí mi información personal

--- a/0/0.1/0.1.md
+++ b/0/0.1/0.1.md
@@ -1,3 +1,11 @@
-# 0.1. Integrante 1
+# 0.1. Jairo Del Rio
 
-Sample content for section 0.1.
+<img src="Jairo_Kazuo_foto.jpge" alt="Jairo Del Río" style="width: 25% height auto;">
+
+- Código: 20211336C
+- Nombre Completo: Jairo Kazuo Del Río Gutiérrez
+- Correo: jairo.delrio.g@uni.pe
+- Correo personal: jkazuodg@gmail.com
+- Edad: 20 años
+
+#Presentación
