--- a/0/0.3/0.3.md
+++ b/0/0.3/0.3.md
@@ -1,3 +1,11 @@
-# 0.3. Integrante 3
-Gonzales Camarena Daryl Renzo 20200160F
-Sample content for section 0.3.
+Integrante 3
+
+![Foto](https://github.com/user-attachments/assets/feeeeab3-9139-41fe-bf05-d0fe0face976)
+
+Daryl Renzo Gonzales Camarena es un estudiante de 6to ciclo de ingeniería de sistemas de la facultad de ingeniería industrial y de sistemas en la Universidad Nacional de Ingeniería.
+
+Correo Institucional: daryl.gonzales.c@uni.pe
+
+Correo Personal: darylgonzales@outlook.com
+
+Usuario de Github: daryl-gonzales
