--- a/0/0.2/0.2.md
+++ b/0/0.2/0.2.md
@@ -1,3 +1,11 @@
 # 0.2. Integrante 2
 
-Sample content for section 0.2.
+NOMBRE: Gamboa Checnes Joel Fernando
+* Codigo: 20212635D
+* Ciclo relativo: 6to ciclo
+* correo: joel.gamboa.c@uni.pe
+* Edad: 22
+* GitHub: joel-gamboa-17
+
+# PRESENTACIÓN
+EN PROCESO ...
