--- a/0/0.2/0.2.md
+++ b/0/0.2/0.2.md
@@ -8,4 +8,15 @@ NOMBRE: Gamboa Checnes Joel Fernando
 * GitHub: joel-gamboa-17
 
 # PRESENTACIÓN
-EN PROCESO ...
+#Presentación
+ - ¿Por qué la UNI - FIIS?
+ 
+ - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
+
+ - ¿Cuál es mi experiencia en programación y base de datos?
+
+ - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
+
+ - ¿Qué espero del curso?
+
+ - ¿Cómo me veo en 10 años?
