--- a/0/0.3/0.3.md
+++ b/0/0.3/0.3.md
@@ -11,3 +11,16 @@ Correo Institucional: daryl.gonzales.c@uni.pe
 Correo Personal: darylgonzales@outlook.com
 
 Usuario de Github: daryl-gonzales
+
+#Presentación
+ - ¿Por qué la UNI - FIIS?
+ 
+ - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
+
+ - ¿Cuál es mi experiencia en programación y base de datos?
+
+ - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
+
+ - ¿Qué espero del curso?
+
+ - ¿Cómo me veo en 10 años?
