--- a/0/0.4/0.4.md
+++ b/0/0.4/0.4.md
@@ -1,3 +1,14 @@
 # 0.4. Integrante 4
 
-Sample content for section 0.4.
+#Presentación
+ - ¿Por qué la UNI - FIIS?
+ 
+ - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
+
+ - ¿Cuál es mi experiencia en programación y base de datos?
+
+ - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
+
+ - ¿Qué espero del curso?
+
+ - ¿Cómo me veo en 10 años?
