Last info about me lol

--- a/0/0.1/0.1.md
+++ b/0/0.1/0.1.md
@@ -1,6 +1,6 @@
 # 0.1. Jairo Del Rio
 
-<img src="Jairo_Kazuo_foto.jpeg" alt="Jairo Del Río" style="width: 10% height: auto;"/>
+<img src="Jairo_Kazuo_foto.jpeg" alt="Jairo Del Río" style="width: auto height: 50%;"/>
 
 - Código: 20211336C
 - Nombre y Apellidos: Jairo Kazuo Del Río Gutiérrez
