--- a/0/0.4/0.4.md
+++ b/0/0.4/0.4.md
@@ -1,4 +1,13 @@
-# 0.4. Integrante 4
+# 0.4. Gavino Geldres
+
+<img src="gavino_geldres_p.jpeg" alt="Foto" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
+
+- Código: 20211242I
+- Nombre y Apellidos: Gavino Gabriel Geldres Pinto
+- Correo UNI: gavino.geldres.p@uni.pe
+- Correo personal: gavinogeldresp@gmail.com
+- Edad: 21 años
+
 
 #Presentación
  - ¿Por qué la UNI - FIIS?
