--- a/0/0.4/0.4.md
+++ b/0/0.4/0.4.md
@@ -1,6 +1,6 @@
 # 0.4. Gavino Geldres
 
-<img src="gavino_geldres_p.jpeg" alt="Foto" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
+<img src="gavino_geldres_p.jpg" alt="Foto" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
 
 - Código: 20211242I
 - Nombre y Apellidos: Gavino Gabriel Geldres Pinto
