--- a/0/0.2/0.2.md
+++ b/0/0.2/0.2.md
@@ -1,22 +1,3 @@
 # 0.2. Integrante 2
 
-NOMBRE: Gamboa Checnes Joel Fernando
-* Codigo: 20212635D
-* Ciclo relativo: 6to ciclo
-* correo: joel.gamboa.c@uni.pe
-* Edad: 22
-* GitHub: joel-gamboa-17
-
-# PRESENTACIÓN
-#Presentación
- - ¿Por qué la UNI - FIIS?
- 
- - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
-
- - ¿Cuál es mi experiencia en programación y base de datos?
-
- - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
-
- - ¿Qué espero del curso?
-
- - ¿Cómo me veo en 10 años?
+Sample content for section 0.2.
