--- a/0/0.7/0.7.md
+++ b/0/0.7/0.7.md
@@ -1,20 +1,3 @@
-# 0.7. Luis Aymachoque
-- Código: 20191144G
-- Nombre Completo: Luis Jairo Aymachoque Aymachoque
-- Ciclo relativo: 6to ciclo
-- Correo: luis.aymachoque.a@uni.pe
-- Correo personal: aymachoqueluis26@gmail.com
-- Usuario de Github: LJairo26
+# 0.7. Integrante 7
 
-#Presentación
- - ¿Por qué la UNI - FIIS?
- 
- - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
-
- - ¿Cuál es mi experiencia en programación y base de datos?
-
- - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
-
- - ¿Qué espero del curso?
-
- - ¿Cómo me veo en 10 años?
+Sample content for section 0.7.
