--- a/0/0.3/0.3.md
+++ b/0/0.3/0.3.md
@@ -1,26 +1,3 @@
-Integrante 3
+# 0.3. Integrante 3
 
-![Foto](https://github.com/user-attachments/assets/feeeeab3-9139-41fe-bf05-d0fe0face976)
-
-Daryl Renzo Gonzales Camarena es un estudiante de 6to ciclo de ingeniería de sistemas de la facultad de ingeniería industrial y de sistemas en la Universidad Nacional de Ingeniería.
-
-Codigo:20200160F
-
-Correo Institucional: daryl.gonzales.c@uni.pe
-
-Correo Personal: darylgonzales@outlook.com
-
-Usuario de Github: daryl-gonzales
-
-#Presentación
- - ¿Por qué la UNI - FIIS?
- 
- - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
-
- - ¿Cuál es mi experiencia en programación y base de datos?
-
- - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
-
- - ¿Qué espero del curso?
-
- - ¿Cómo me veo en 10 años?
+Sample content for section 0.3.
