--- a/0/0.6/0.6.md
+++ b/0/0.6/0.6.md
@@ -1,14 +1,3 @@
 # 0.6. Integrante 6
 
-#Presentación
- - ¿Por qué la UNI - FIIS?
- 
- - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
-
- - ¿Cuál es mi experiencia en programación y base de datos?
-
- - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
-
- - ¿Qué espero del curso?
-
- - ¿Cómo me veo en 10 años?
+Sample content for section 0.6.
