--- a/0/0.2/0.2.md
+++ b/0/0.2/0.2.md
@@ -1,3 +1,29 @@
-# 0.2. Integrante 2
+# 0.2. Joel Fernando Gamboa Checnes
 
-Sample content for section 0.2.
+<img src="" alt="Joel" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
+
+- Código: 20212635D
+- Nombre y Apellidos: Joel Fernando Gamboa Checnes
+- Correo: joel.gamboa.c@uni.pe
+- Correo personal: joelgamboa777@gmail.com
+- Edad: 22 años
+
+#Presentación
+
+- ¿Por qué la UNI - FIIS?
+  Porque es una universidad de gran prestigio y donde salen muy buenos profesionales. Escogí la facultad de la FIIS, especialmente ingeniería de sistemas porque me gusta resolver problemas y además también me gusta todo relacionado a la tecnología y a las computadoras. 
+
+- ¿Cómo evalúo mi experiencia con los cursos de la carrera hasta el momento?
+  Los cursos me han parecido muy interesantes, tanto matemáticas como otros cursos relacionado a la tecnología  y a la ciencia de sistemas, ya que nos brindan enfoques diferentes para la resolución de problemas complejos. 
+
+- ¿Cuál es mi experiencia en programación y base de datos?
+  No tengo mucha experencia en lenguajes orientados al diseño web pero si tengo conocimientos de algunos otros programas como Python, C++, Java, C#, no en un nivel avanzado pero si lo más esencial.  
+
+- ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
+  Fue algo que me dio una una forma de ver las cosas de forma diferente, ya que al modelar conceptualmente tienes que tener siempre en cuenta qué cosas tienen que estar presente en el modelo y como se relacionan. En mi caso elegí una empresa de producción de vinos. 
+
+- ¿Qué espero del curso?
+  Espero tener suficiente conocimiento en relación al diseño de base de datos ya que, si bien tengo algunos conceptos de esta, todavía no se cuál es la forma de diseñarla correctamente para tener una base de datos robusta.
+
+- ¿Cómo me veo en 10 años?
+  Yo me orienta a realizar una linea de carrera dirigido a la ciberseguridad y creación de sistemas de seguridad informática. Mi objetivo es llegar a ser un arquitecto de seguridad y tener una empresa que brinde servicios de seguridad de la información hacia las demás empresas. 
