--- a/0/0.2/0.2.md
+++ b/0/0.2/0.2.md
@@ -1,6 +1,6 @@
 # 0.2. Joel Fernando Gamboa Checnes
 
-<img src="" alt="Joel" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
+<img src="20201202_090415.jpg" alt="Joel" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
 
 - Código: 20212635D
 - Nombre y Apellidos: Joel Fernando Gamboa Checnes
