--- a/1/1.md
+++ b/1/1.md
@@ -1,3 +1,6 @@
-# 1. Descripción de la Empresa Elegida
+# 1. Descripción de la Empresa 
+## MallPlaza
+<img src = "https://safecitying.com/wp-content/uploads/2023/08/mallplaza-entrada.png" withd="150" height="200">
 
-Sample content for section 1.
+Mallplaza (escrito Mall Plaza hasta octubre de 2016) es una cadena de centros comerciales chilena que se encuentran distribuidos en nueve ciudades de Chile, en cuatro de Perú y cinco en Colombia.
+De los 17 centros comerciales en Chile, ocho se encuentran en el Gran Santiago, dos en el Gran Concepción, y los otros en Arica, Iquique, Calama, Antofagasta, Copiapó, La Serena y Los Ángeles. En Perú, tiene centros comerciales en las ciudades de Lima, Arequipa, y Trujillo. Por su parte, en Colombia cuenta con complejos comerciales en Cali, Bogotá, Barranquilla, Cartagena y Manizales.
