--- a/0/0.7/0.7.md
+++ b/0/0.7/0.7.md
@@ -1,3 +1,7 @@
-# 0.7. Integrante 7
-
-Sample content for section 0.7.
+# 0.7. Luis Aymachoque
+- Código: 20191144G
+- Nombre Completo: Luis Jairo Aymachoque Aymachoque
+- Ciclo relativo: 6to ciclo
+- Correo: luis.aymachoque.a@uni.pe
+- Correo personal: aymachoqueluis26@gmail.com
+- Usuario de Github: LJairo26
