Info sobre empresa

--- a/1/1.1/1.1.md
+++ b/1/1.1/1.1.md
@@ -1,3 +1,40 @@
 # 1.1. Datos de la Empresa
 
-Sample content for section 1.1.
+## Acerca de la Empresa
+
+Mall Plaza, la cadena de centros comerciales líder en Latinoamérica. Mall Plaza es una de las principales cadenas de centros comerciales en Latinoamérica. Se caracterizan por una fuerte conexión con sus consumidores, por su gran capacidad de crecimiento, por una alta eficiencia, innovación y sostenibilidad a través del tiempo.
+
+## Misión
+
+Desarrollar espacios públicos de encuentro, modernos y atractivos, que satisfagan el mayor número de necesidades de la comunidad por medio de bienes, servicios y experiencias relevantes en el tiempo, que contribuyan a mejorar su calidad de vida, maximizando la rentabilidad de los accionistas y promoviendo el bienestar de sus colaboradores.
+
+## Visión
+
+Ser la principal cadena de centros comerciales de Latinoamérica, producto de nuestra constante capacidad de crecimiento, el cual se sustenta gracias a un permanente proceso de innovación, eficiencia y sostenibilidad a través del tiempo.
+
+## Servicios
+
+- Áreas de entretenimiento: Cines, juegos para niños, áreas recreativas, y en algunos casos, zonas de eventos o espectáculos en vivo.
+- Gastronomía: Plazas de comida con una amplia variedad de restaurantes y cafeterías.
+- Tiendas de retail: Grandes almacenes y tiendas por departamento como Falabella, Ripley, entre otras.
+- Supermercados: Servicios de supermercado para las necesidades diarias.
+- Salud y belleza: Salones de belleza, barberías, centros de cuidado personal, y clínicas.
+- Estacionamiento: Amplios espacios de estacionamiento con sistemas modernos de control y seguridad.
+- Bancos y servicios financieros: Sucursales bancarias y cajeros automáticos.
+- Servicios al cliente: Como puntos de información, servicio de seguridad, y zonas de descanso.
+
+- Locales comerciales: Son espacios destinados a tiendas de ropa, tecnología, restaurantes, y otros negocios minoristas. Pueden variar en tamaño, ubicación y visibilidad dentro del centro comercial.
+
+- Grandes superficies: MallPlaza también cuenta con áreas para grandes tiendas por departamento, supermercados y marcas ancla que atraen a una mayor cantidad de público, como Ripley, Falabella o Tottus.
+
+- Islas o kioscos: Son pequeños espacios en áreas de alto tráfico, como los pasillos principales, donde se pueden vender productos o servicios de forma rápida, ideales para pequeñas empresas o marcas emergentes.
+
+- Áreas de entretenimiento o eventos: Espacios que pueden ser arrendados temporalmente para eventos promocionales, lanzamientos de productos, ferias o actividades recreativas.
+
+## Contacto
+
+Esther Huamaní Torres - Subgerente Regional de Análisis Financiero
+
+## Justificación
+
+La gestión eficiente de los espacios y arrendamientos es crucial para cualquier organización que ofrezca locales comerciales, oficinas o áreas de eventos, como centros comerciales, edificios de oficinas, o empresas de bienes raíces. Sin embargo, muchas organizaciones carecen de una plataforma centralizada que facilite el manejo de la información de los arrendatarios, contratos, y disponibilidad de espacios
