--- a/0/0.md
+++ b/0/0.md
@@ -1,3 +1,16 @@
 # 0. Acerca del Grupo
 
-Sample content for section 0.
+## Empressa
+MallPlaza: Grandes centros comerciales de entre 40.000-80.000 m2 de GLA, con impacto sobre múltiples zonas geográficas, con tiendas anclas, tiendas especializadas orientadas principalmente a la moda, cines, juegos y restaurant.
+
+## Proyecto
+Sistema para la Gestión de Espacios y Arrendamientos en las diferentes sedes de MallPlaza
+
+## Integrantes:
+- Del Río Gutiérrez, Jairo Kazuo - 20211336C
+- Gamboa Checnes, Joel Fernando - 20212635D
+- Geldres Pinto, Gavino Gabriel - 20211242I
+- Gonzales Camarena, Daryl Renzo - 20200160F
+- Huamani Ruiz, Emanuel Lenin -	20181195H
+- Campos Gamonal, Piero César - 20210063C
+
