--- a/1/1.3/1.3.md
+++ b/1/1.3/1.3.md
@@ -1,3 +1,8 @@
 # 1.3. Procesos de Negocio identificados
 
+-Proceso de login y seguridad
+![Login](Login.jpg)
+
+-Proceso de gestión de empleados
+![Empleados](Empleados.jpg)
 Sample content for section 1.3.
