--- a/1/1.3/1.3.md
+++ b/1/1.3/1.3.md
@@ -1,8 +1,8 @@
 # 1.3. Procesos de Negocio identificados
 
 -Proceso de login y seguridad
-![Login](Login.jpg)
+![Login](Login.png)
 
 -Proceso de gestión de empleados
-![Empleados](Empleados.jpg)
+![Empleados](Empleados.png)
 Sample content for section 1.3.
