--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -1,3 +1,8 @@
-# 0.6. Integrante 6
+# 0.6. Integrante 6 Emanuel Ruben Huamani Ruiz
 
-Sample content for section 0.6.
+
+- Código: 20181195H
+- Nombre y Apellidos: Emnuel Rubén Huamani Ruiz
+- Correo: emanuel.huamani.r@uni.pe
+- Correo personal: emanuelhr2700@gmail.com
+- Edad: 24 años
