--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -9,9 +9,9 @@ Módulo de facturación y pagos para la generación de facturas por concepto de 
 envío de recordatorios de pago.
 
 Responsabilidades
-Mantenimiento de un registro detallado de todos los contratos de arrendamiento.
-Gestión del ciclo de vida de los contratos (creación, modificación, renovación, terminación).
-Asignación óptima de espacios disponibles.
-Generación de reportes periódicos sobre la ocupación de los espacios y el rendimiento de los arrendamientos.
-Gestión de las comunicaciones con los inquilinos.
-Coordinación con otros módulos para garantizar la integridad de la información.
+-Mantenimiento de un registro detallado de todos los contratos de arrendamiento.
+-Gestión del ciclo de vida de los contratos (creación, modificación, renovación, terminación).
+-Asignación óptima de espacios disponibles.
+-Generación de reportes periódicos sobre la ocupación de los espacios y el rendimiento de los arrendamientos.
+-Gestión de las comunicaciones con los inquilinos.
+-Coordinación con otros módulos para garantizar la integridad de la información.
