--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -1,3 +1,14 @@
 # 4.8. Módulo 8
 
-# Módulo de Mantenimiento y servicio
+# Módulo de programación de mantenimientos de establecimiento
+Descripción:
+
+Este módulo permite planificar y ejecutar tareas de mantenimiento en las instalaciones del centro comercial.
+
+| Requerimiento        |  Descripción                                                             |
+|-----------------------|--------------------------------------------------------------------------|
+|        R1            |    Definir y programar actividades de mantenimiento preventivo en cada instalación           |
+|R2 |Registrar todas las actividades de mantenimiento realizadas en cada instalación|
+
+
+
