--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -10,5 +10,27 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 |        R1            |    Definir y programar actividades de mantenimiento preventivo en cada instalación           |
 |R2 |Registrar todas las actividades de mantenimiento realizadas en cada instalación|
 
+## Especificaciones de requerimientos
+* R1
+
+| Nombre | Definir y programar actividades de mantenimiento preventivo en cada instalación |
+|---------|---------------------------------------------------------------------------------|
+| Descripción| Este caso de uso permite al usuario planificar y programar actividades de mantenimiento preventivo para las infraestructuras en cada instalación                                                                               |
+|Actor    | Administrador de Mantenimiento|
+| Precondiciones |Deben estar registrados los equipos, instalaciones y ubicaciones donde se realizarán los mantenimientos preventivos|
+| Postcondiciones | Se actualiza el calendario de mantenimientos preventivos en la interfaz del sistema|
+
+  Flujo de eventos:
+  
+|Nro |  Acción del actor |    Respuesta del sistema   |
+|----|------------------|------------------------------|
+| 1 |  El Administrador de Mantenimiento accede al módulo de mantenimiento preventivo | El sistema muestra una Pantalla principal de selección|
+| 2 |  El Administrador selecciona la instalación, el encargado, Tipo de mantenimiento, Descripción, Prioridad, Fecha| El sistema muestra una opción de confirmación|
+| 3 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado |
+
+
+
+
+
 
 
