--- a/4/4.md
+++ b/4/4.md
@@ -1,2 +1,123 @@
 # 4. Especificación de Requerimientos y Prototipo
+
+## 4.1. Módulos y Códigos de Requerimientos
+<table>
+    <tbody>
+        <tr>
+            <td>#</td>
+            <td>Módulo</td>
+            <td>#</td>
+            <td>Requerimiento</td>
+            <td>Código</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Módulo de Logueo y seguridad</td>
+            <td>1</td>
+            <td>Nombre del requerimiento</td>
+            <td>R001</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Módulo de Usuario</td>
+            <td>2</td>
+            <td>Nombre del requerimiento</td>
+            <td>R002</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Módulo de Arrendamientos</td>
+            <td>3</td>
+            <td>Nombre del requerimiento</td>
+            <td>R003</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Módulo de Inquilinos</td>
+            <td>4</td>
+            <td>Nombre del requerimiento</td>
+            <td>R004</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Módulo Financiera</td>
+            <td>5</td>
+            <td>Nombre del requerimiento</td>
+            <td>R005</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Módulo de Eventos</td>
+            <td>6</td>
+            <td>Nombre del requerimiento</td>
+            <td>R006</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Módulo de Mantenimiento y Servicio</td>
+            <td>7</td>
+            <td>Nombre del requerimiento</td>
+            <td>R007</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Módulo de Logueo y seguridad</td>
+            <td>8</td>
+            <td>Nombre del requerimiento</td>
+            <td>R008</td>
+        </tr>
+    </tbody>
+</table>
+
+## 4.2. Descripción de Módulos
+### 4.2.1. Módulo de Logueo y Seguridad
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+### 4.2.2. Módulo de Usuarios
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+
+### 4.2.3. Módulo de Arrendamientos
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+
+### 4.2.4. Módulo de Inquilinos
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+
+### 4.2.5. Módulo de Facturación y Pagos
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+### 4.2.6. Módulo Financiera
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+### 4.2.7. Módulo de Eventos
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+### 4.2.8. Módulo de Mantenimiento y Servicio
+#### Responsabilidades
+    - 
+#### Interacción con otros módulos
+    - 
+    
+
 [Grupo 5 Prototipo](https://www.figma.com/design/VWVEbq72V7HGyZJb9HV39f/DBD_Grupo_5?node-id=71-35&node-type=frame&t=RMNqg1MfI5jyNTJV-0)
