--- a/0/0.1_Jairo/0.1.md
+++ b/0/0.1_Jairo/0.1.md
@@ -1,14 +1,17 @@
-# 0.1. Jairo Del Rio
+<h1 align="center">Jairo Del Rio</h1>
+<p align="center">
+  <img src="Jairo_Kazuo_foto.jpeg" alt="Jairo Del Río" style="width: 300px; border-radius: 150px; border: 5px solid #fff;">
+</p>
 
-<img src="Jairo_Kazuo_foto.jpeg" alt="Jairo Del Río" style="display: block; margin: 10px auto; width: 300px; border-radius: 150px; border: 5px solid #fff;">
 
+# About Me
 - Código: 20211336C
 - Nombre y Apellidos: Jairo Kazuo Del Río Gutiérrez
 - Correo: jairo.delrio.g@uni.pe
 - Correo personal: jkazuodg@gmail.com
 - Edad: 20 años
 
-#Presentación
+# Presentación
 
 - ¿Por qué la UNI - FIIS?
   Desde chico me ha gustado las matemáticas, luego en la secundaria me enteré que había una universidad que solo entraban los mejores en el área que andaba interesado; las ciencias y matemáticas. No fue hasta en pandemia que me decidí que la FIIS era la facultad a la que quería entrar.
