--- a/0/0.1_Jairo/0.1.md
+++ b/0/0.1_Jairo/0.1.md
@@ -1,4 +1,4 @@
-<h1 align="center">Jairo Del Rio</h1>
+<h1 align="center">Jairo Kazuo Del Rio Gutiérrez</h1>
 <p align="center">
   <img src="Jairo_Kazuo_foto.jpeg" alt="Jairo Del Río" style="width: 300px; border-radius: 150px; border: 5px solid #fff;">
 </p>
