--- a/4/4.4/4.4.md
+++ b/4/4.4/4.4.md
@@ -1,4 +1,74 @@
 # 4.4. Módulo 4
 
-# Módulo de Inquilinos
+<h1>Módulo de Inquilinos</h1>
 
+| Requerimiento | Nombre |
+|---------------|--------|
+| R001 | Crear un nuevo inquilino |
+| R002 | Asignar un espacio a un inquilino |
+| R003 | Eliminar o dar de baja a un inquilino |
+| R004 | Gestionar la renovación de contratos |
+
+## Especificaciones de requerimientos <br>
+### Caso de Uso #1: Crear un nuevo inquilino
+
+| Código | R001 |
+|--------|------|
+| Objetivo | Registrar a un nuevo inquilino en el sistema con todos sus datos relevantes |
+| Descripción | El administrados ingresa un nuevo inquilino en el sistema proporcionando la información de contacto y de negocios requerida. |
+| Actor | Administrador |
+| Flujo de eventos |
+| 1 | El administrador accede al sistema y selecciona la opción "Agregar nuevo inquilino". |
+| 2 | El sistema muestra un formulario para ingresar los datos del inquilino: nombre comercial, razón social, RUC, dirección, teléfono y correo electrónico. |
+| 3 | El administrador llena el formulario con la información del inquilono. |
+| 4 | El sistema valida la información ingresada, asegurándose de que no haya duplicados (especialmente el RUC). |
+| 5 | Si los datos son válidos, el sistema guarda al inquilino en la base de datos y notifica al administrador del éxito. |
+| 6 | El administrador puede optar por agregar contactos adicionales para el inquilino registrado. |
+| 7 | Fin del caso de uso. |
+
+### Caso de Uso #2: Asignar un espacio a un inquilino
+| Código | R002 |
+|--------|------|
+| Objetivo | Asignar un espacio disponible en el centro comerciaol a un inquilino |
+| Descripción | El administrador selecciona un espacio disponible y asigna un contrato de arrendamiento a un inquilino |
+| Actor | Administrador |
+| Flujo de eventos |
+| 1 | El administrador accede al sistema y selecciona un inquilino registrado. |
+| 2 | El administrador selecciona la opción "Asignar espacio". |
+| 3 | El sistema muestra una lista de espacios disponibles, junto con sus detaller (ubicación, superficie, tipo de espacio). |
+| 4 | El administrador selecciona un espacio adecuado para el inquilino. |
+| 5 | El sistema solicita el administrador que ingrese los detalles del contrato: fechas de inicio y fin, monto de renta, condiciones adicionales.
+| 6 | El sistema valida que el espacio esté disponible en las fecha indicadas. |
+| 7 | Si todo está correcto, el sistema guarda el c ontarto y actualiza el estado del espacio a "Ocupado". |
+| 8 | El sistema notifica al administrado que el espacio ha sido asignado exitosamente. |
+| 9 | Fin del caso de uso. |
+
+### Caso de Uso #3: Eliminar o dar de baja a un inquilino
+| Código | R003 |
+|--------|------|
+| Objetivo | Eliminar o dar de baja a un inquilino que ya no tiene contratos activos. |
+| Descripción | El administrador pueda dar de baja o eliminar a un inquilino si este ya no tiene contratos ni pagos pendientes. |
+| Actor | Administrador |
+| Flujo de Eventos |
+| 1 | Se accede al sistema y busca al inquilino a dar de baja. |
+| 2 | El sistema validad si el inquilino tiene contratos activos o pagos pendientes. |
+| 3 | Si no existen contratos ni pagos pendientes, el sistema muestra la opción de "Eliminar" o "Dar de baja". |
+| 4 | El administrador confirma la acción. |
+| 5 | El sistema cambia el estado del inquilino a "Inactivo° o lo elimina de la base de datos. |
+| 6 | El sistema notifica al administrador sobre la finalización de la operación. |
+| 7 | Fin del caso de uso. |
+
+### Caso de Uso #4: Gestionar la renovación de contratos
+| Código | R003 |
+|--------|------|
+| Objetivo | Permitir la renovación de un contrato de arrendamiento existente. |
+| Descripción | El administrador renueva un contrato próximo a vencer, actualizando fechas y condificones de arrendamiento. |
+| Actor | Administrador |
+| Flujo de eventos |
+| 1 | El usuario accede el sistema y seleccion el inquilino correspondiente. |
+| 2 | Se selecciona el contrato actual y elige la opción "Renovar contrato". |
+| 3 | El sistema presenta un formulario para actualizar las fechas y condiciones del nuvo contrato. |
+| 4 | El usuario ingresa las nuevas fechas, monto de renta y posibles cambios en las condiciones. |
+| 5 | El sistema valida que el espacio siga disponible y que las fechas sena coherentes. |
+| 6 | El sistema actualiza el contrato con la nueva información. |
+| 7 | Fin del caso de uso. |
