--- a/4/4.md
+++ b/4/4.md
@@ -12,56 +12,71 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>Módulo de Logueo y seguridad</td>
+            <td>Logueo y seguridad</td>
             <td>1</td>
             <td>Nombre del requerimiento</td>
             <td>R001</td>
         </tr>
         <tr>
             <td>2</td>
-            <td>Módulo de Usuario</td>
+            <td>Usuario</td>
             <td>2</td>
             <td>Nombre del requerimiento</td>
             <td>R002</td>
         </tr>
         <tr>
             <td>3</td>
-            <td>Módulo de Arrendamientos</td>
+            <td>Arrendamientos</td>
             <td>3</td>
             <td>Nombre del requerimiento</td>
             <td>R003</td>
         </tr>
         <tr>
-            <td>4</td>
-            <td>Módulo de Inquilinos</td>
-            <td>4</td>
-            <td>Nombre del requerimiento</td>
-            <td>R004</td>
+            <td rowspan="4">4</td>
+            <td rowspan="4">Inquilinos</td>
+            <td>1</td>
+            <td>Crear un nuevo Inquilino</td>
+            <td>R001</td>
         </tr>
         <tr>
+            <td>2</td>
+            <td>Asignar un espacio a un inquilino</td>
+            <td>R002</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Eliminar o dar de baja a un inquilino</td>
+            <td>R003</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Gestionar la renovación de contratos</td>
+            <td>R004</td>
+        </tr>        
+        <tr>
             <td>5</td>
-            <td>Módulo Financiera</td>
+            <td>Módulo Facturación y pagos</td>
             <td>5</td>
             <td>Nombre del requerimiento</td>
             <td>R005</td>
         </tr>
         <tr>
             <td>6</td>
-            <td>Módulo de Eventos</td>
+            <td>Financiera</td>
             <td>6</td>
             <td>Nombre del requerimiento</td>
             <td>R006</td>
         </tr>
         <tr>
             <td>7</td>
-            <td>Módulo de Mantenimiento y Servicio</td>
+            <td>Eventos</td>
             <td>7</td>
             <td>Nombre del requerimiento</td>
             <td>R007</td>
         </tr>
         <tr>
             <td>8</td>
-            <td>Módulo de Logueo y seguridad</td>
+            <td>Mantenimiento y Servicio</td>
             <td>8</td>
             <td>Nombre del requerimiento</td>
             <td>R008</td>
@@ -72,21 +87,21 @@
 ## 4.2. Descripción de Módulos
 ### 4.2.1. Módulo de Logueo y Seguridad
 #### Responsabilidades
-    - 
+- 
 #### Interacción con otros módulos
-    - 
+- 
 
 ### 4.2.2. Módulo de Usuarios
 #### Responsabilidades
-    - 
+- 
 #### Interacción con otros módulos
-    - 
+- 
 
 ### 4.2.3. Módulo de Arrendamientos
 #### Responsabilidades
-    - 
+- 
 #### Interacción con otros módulos
-    - 
+- 
 
 ### 4.2.4. Módulo de Inquilinos
 #### Responsabilidades
