--- a/0/0.5_Piero/0.5.md
+++ b/0/0.5_Piero/0.5.md
@@ -1,3 +1,29 @@
-# 0.5. Integrante 5
+# 0.5. Piero Cesar Campos Gamonal
 
-Sample content for section 0.5.
+- Codigo: 20210063C
+- Ciclo Relativo: 6to
+- Correo: piero.campos.g@uni.pe
+- Edad: 21
+- Github: pierocg30
+
+# Presentación
+
+- ¿Porqué la UNI-FIIS?
+  Porque me gustaban las matemáticas, también elegí la UNI por su prestigio.
+  La FIIS, porque la carrera de sistemas tiene especialidades interesantes y se puede trabajar tranquilamente de manera semipresencial.
+
+- ¿Como evaluo mi experiencia con los cursos de la carrera hasta el momento?
+  Los cursos que he llevado, hasta ahora me han parecido interesantes, algunos mas exigentes que otros, pero siempre suman a nuestra formacion como profesionales,    se me complicaron algunos cursos en mis primeros ciclos, pero ahora que ya me adapté a la universidad, ando más tranquilo.
+
+- ¿Cual es mi experiencia en programación y bases de datos?
+  Tengo poca experiencia en programación, conozco algunos lenguajes de programación, por algunos cursos que llevé en la UNI, y fuera de la UNI, pero me gustaría      aprender más, ya que me parece muy interesante.
+
+- ¿Como fue mi experiencia en el curso de Modelado conceptual de datos y que sistema elegí?
+  El curso lo lleve con el Profesor Tino Reyna, donde aprendi bastante sobre como un sistema puede ser universal y robusto, también la importancia de la semántica,   y como se relacionan las entidades para dar forma al modelo de negocio.
+  El sistema que elegí fue desarrollo de software.
+
+- ¿Que espero del curso?
+  Aprender cosas nuevas, y trabajar de la mejor manera con mi equipo para sacar el proyecto del curso adelante.
+
+- ¿Cómo me veo en 10 años?
+  Me veo como una profesional con experiencia  en analisis de datos y con ganas de iniciar un emprendimiento.
