--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -1,6 +1,6 @@
 # 4.8. Módulo 8
 
-# Módulo de programación de mantenimientos de establecimiento
+# Módulo de programación de mantenimientos 
 Descripción:
 
 Este módulo permite planificar y ejecutar tareas de mantenimiento en las instalaciones del centro comercial.
