--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -15,3 +15,12 @@ Responsabilidades
 - Generación de reportes periódicos sobre la ocupación de los espacios y el rendimiento de los arrendamientos.
 - Gestión de las comunicaciones con los inquilinos.
 - Coordinación con otros módulos para garantizar la integridad de la información.
+### Módulo 4.3: Gestión de Arrendamientos
+
+| Requerimiento | Nombre |
+|---|---|
+| RA01 | Crear un nuevo contrato de arrendamiento |
+| RA02 | Modificar un contrato de arrendamiento existente |
+| RA03 | Dar de baja un contrato de arrendamiento |
+| RA04 | Gestionar renovaciones |
+| RA05 | Asignar un espacio a un inquilino |
