--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -1,13 +1,4 @@
 # 4.3. Módulo de Gestión de Arrendamientos
-Este módulo ofrece un control completo sobre los arrendamientos, desde la gestión contractual hasta la optimización del espacio físico, 
-mejorando la eficiencia operativa y la rentabilidad del centro comercial.
-
-Interacción con otros módulos:
-Módulo de gestión de inquilinos para el intercambio de información sobre los arrendatarios (datos de contacto, historial de pagos, etc.).
-Envío de notificaciones a los inquilinos sobre vencimientos, renovaciones y otros eventos relacionados con el contrato.
-Módulo de facturación y pagos para la generación de facturas por concepto de alquiler, registro de pagos realizados por los inquilinos y 
-envío de recordatorios de pago.
-
 Responsabilidades
 - Mantenimiento de un registro detallado de todos los contratos de arrendamiento.
 - Gestión del ciclo de vida de los contratos (creación, modificación, renovación, terminación).
@@ -19,8 +10,8 @@ Responsabilidades
 
 | Requerimiento | Nombre |
 |---|---|
-| RA01 | Crear un nuevo contrato de arrendamiento |
-| RA02 | Modificar un contrato de arrendamiento existente |
-| RA03 | Dar de baja un contrato de arrendamiento |
-| RA04 | Gestionar renovaciones |
-| RA05 | Asignar un espacio a un inquilino |
+| R001 | Crear un nuevo contrato de arrendamiento |
+| R002 | Modificar un contrato de arrendamiento existente |
+| R003 | Gestionar los locales comerciales |
+| R004 | Visualizar el total de contratos |
+| R005 | Gestionar los detalles del contrato de cada inquilino |
